--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -20,62 +20,80 @@
 #    You should have received a copy of the GNU Lesser General Public License
 #    along with wiringPi.  If not, see <http://www.gnu.org/licenses/>.
 #################################################################################
+PROJECT						=	wiringPi
+VERSION						=	$(shell cat ../VERSION)
 
-VERSION=$(shell cat ../VERSION)
-DESTDIR?=/usr
-PREFIX?=/local
 
-LDCONFIG?=ldconfig
+BASE_INSTALL_DIR			?=	usr/
+LOCAL_INSTALL_DIR			?=	local/
+PROJ_INSTALL_DIR			?=	$(PROJECT)/
+ARCHITECTURE_INSTALL_DIR	?=	armhf/
+
+PUBLIC_INCLUDE_DIR			= $(BASE_INSTALL_DIR)include/
+PUBLIC_LIB_DIR				= $(BASE_INSTALL_DIR)lib/
+LOCAL_INCLUDE_DIR			= $(BASE_INSTALL_DIR)$(LOCAL_INSTALL_DIR)include/
+LOCAL_LIB_DIR				= $(BASE_INSTALL_DIR)$(LOCAL_INSTALL_DIR)lib/$(PROJ_INSTALL_DIR)$(ARCHITECTURE_INSTALL_DIR)
+
+DEB_TEMPLATE_DIR			= ../debian-template/$(PROJECT)/
+
+
+LDCONFIG	?=	ldconfig
+
 
 ifneq ($V,1)
 Q ?= @
 endif
 
-STATIC=libwiringPi.a
-DYNAMIC=libwiringPi.so.$(VERSION)
 
-#DEBUG	= -g -O0
-DEBUG	= -O2
-CC	= gcc
-INCLUDE	= -I.
-DEFS	= -D_GNU_SOURCE
-CFLAGS	= $(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Winline $(INCLUDE) -pipe -fPIC
-#CFLAGS	= $(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Wconversion -Winline $(INCLUDE) -pipe -fPIC
+STATIC_LIB	=	lib$(PROJECT).a
+DYNAMIC_LIB	=	lib$(PROJECT).so
 
-LIBS    = -lm -lpthread -lrt -lcrypt
+
+CC		=	arm-linux-gnueabihf-gcc
+#DEBUG	=	-g -O0
+DEBUG	=	-O2
+INCLUDE	=	-I.
+DEFS	=	-D_GNU_SOURCE
+CFLAGS	=	$(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Winline $(INCLUDE) -pipe -fPIC
+#CFLAGS	=	$(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Wconversion -Winline $(INCLUDE) -pipe -fPIC
+LIBS	=	-lm -lpthread -lrt -lcrypt
 
 ###############################################################################
 
-SRC	=	wiringPi.c						\
-		wiringSerial.c wiringShift.c				\
-		piHiPri.c piThread.c					\
-		wiringPiSPI.c wiringPiI2C.c				\
-		softPwm.c softTone.c					\
-		mcp23008.c mcp23016.c mcp23017.c			\
-		mcp23s08.c mcp23s17.c					\
-		sr595.c							\
-		pcf8574.c pcf8591.c					\
-		mcp3002.c mcp3004.c mcp4802.c mcp3422.c			\
-		max31855.c max5322.c ads1115.c				\
-		sn3218.c						\
-		bmp180.c htu21d.c ds18b20.c rht03.c			\
-		drcSerial.c drcNet.c					\
-		pseudoPins.c						\
-		wpiExtensions.c
+SOURCES	=	wiringPi.c \
+			wiringSerial.c wiringShift.c \
+			piHiPri.c piThread.c \
+			wiringPiSPI.c wiringPiI2C.c \
+			softPwm.c softTone.c \
+			mcp23008.c mcp23016.c mcp23017.c \
+			mcp23s08.c mcp23s17.c \
+			sr595.c \
+			pcf8574.c pcf8591.c \
+			mcp3002.c mcp3004.c mcp4802.c mcp3422.c \
+			max31855.c max5322.c ads1115.c \
+			sn3218.c \
+			bmp180.c htu21d.c ds18b20.c rht03.c \
+			drcSerial.c drcNet.c \
+			pseudoPins.c \
+			wpiExtensions.c
 
 HEADERS =	$(shell ls *.h)
 
-OBJ	=	$(SRC:.c=.o)
+OBJS	=	$(SOURCES:.c=.o)
 
-all:		$(DYNAMIC)
+
+all:		$(DYNAMIC_LIB).$(VERSION)
+
 
 .PHONY:	static
 static:	
-		$Q cat noMoreStatic
+	$Q cat noMoreStatic
 
-$(DYNAMIC):	$(OBJ)
+
+$(DYNAMIC_LIB).$(VERSION):	$(OBJS)
 	$Q echo "[Link (Dynamic)]"
-	$Q $(CC) -shared -Wl,-soname,libwiringPi.so$(WIRINGPI_SONAME_SUFFIX) -o libwiringPi.so.$(VERSION) $(LIBS) $(OBJ)
+	$Q $(CC) -shared -Wl,-soname,$(DYNAMIC_LIB)$(WIRINGPI_SONAME_SUFFIX) -o $(DYNAMIC_LIB).$(VERSION) $(LIBS) $(OBJS)
+
 
 .c.o:
 	$Q echo [Compile] $<
@@ -85,46 +103,51 @@ $(DYNAMIC):	$(OBJ)
 .PHONY:	clean
 clean:
 	$Q echo "[Clean]"
-	$Q rm -f $(OBJ) $(OBJ_I2C) *~ core tags Makefile.bak libwiringPi.*
+	$Q rm -f $(OBJS) $(OBJ_I2C) *~ core tags Makefile.bak lib$(PROJECT).*
+
 
 .PHONY:	tags
-tags:	$(SRC)
+tags:	$(SOURCES)
 	$Q echo [ctags]
-	$Q ctags $(SRC)
+	$Q ctags $(SOURCES)
 
 
 .PHONY:	install
-install:	$(DYNAMIC)
+install:	$(DYNAMIC_LIB).$(VERSION)
 	$Q echo "[Install Headers]"
-	$Q install -m 0755 -d						$(DESTDIR)$(PREFIX)/include
-	$Q install -m 0644 $(HEADERS)					$(DESTDIR)$(PREFIX)/include
+	$Q install	-m 0644 $(HEADERS)								/$(PUBLIC_INCLUDE_DIR)
+
 	$Q echo "[Install Dynamic Lib]"
-	$Q install -m 0755 -d						$(DESTDIR)$(PREFIX)/lib
-	$Q install -m 0755 libwiringPi.so.$(VERSION)			$(DESTDIR)$(PREFIX)/lib/libwiringPi.so.$(VERSION)
-	$Q ln -sf $(DESTDIR)$(PREFIX)/lib/libwiringPi.so.$(VERSION)	$(DESTDIR)/lib/libwiringPi.so
+	$Q install	-m 0755 -d										/$(LOCAL_LIB_DIR)
+	$Q install	-m 0755 $(DYNAMIC_LIB).$(VERSION)				/$(LOCAL_LIB_DIR)$(DYNAMIC_LIB).$(VERSION)
+	$Q ln		-sf /$(LOCAL_LIB_DIR)$(DYNAMIC_LIB).$(VERSION)	/$(PUBLIC_LIB_DIR)$(DYNAMIC_LIB)
 	$Q $(LDCONFIG)
 
+
 .PHONY:	install-deb
-install-deb:	$(DYNAMIC)
+install-deb:	$(DYNAMIC_LIB).$(VERSION)
 	$Q echo "[Install Headers: deb]"
-	$Q install -m 0755 -d							~/wiringPi/debian-template/wiringPi/usr/include
-	$Q install -m 0644 $(HEADERS)						~/wiringPi/debian-template/wiringPi/usr/include
+	$Q install -m 0755 -d						$(DEB_TEMPLATE_DIR)$(PUBLIC_INCLUDE_DIR)
+	$Q install -m 0644 $(HEADERS)				$(DEB_TEMPLATE_DIR)$(PUBLIC_INCLUDE_DIR)
+
 	$Q echo "[Install Dynamic Lib: deb]"
-	install -m 0755 -d							~/wiringPi/debian-template/wiringPi/usr/lib
-	install -m 0755 libwiringPi.so.$(VERSION)				~/wiringPi/debian-template/wiringPi/usr/lib/libwiringPi.so.$(VERSION)
-	ln -sf ~/wiringPi/debian-template/wiringPi/usr/lib/libwiringPi.so.$(VERSION)	~/wiringPi/debian-template/wiringPi/usr/lib/libwiringPi.so
+	install -m 0755 -d							$(DEB_TEMPLATE_DIR)$(PUBLIC_LIB_DIR)
+	install -m 0755 libwiringPi.so.$(VERSION)	$(DEB_TEMPLATE_DIR)$(PUBLIC_LIB_DIR)$(DYNAMIC_LIB).$(VERSION)
+	ln -sf $(DEB_TEMPLATE_DIR)$(PUBLIC_LIB_DIR)$(DYNAMIC_LIB).$(VERSION)	$(DEB_TEMPLATE_DIR)$(PUBLIC_LIB_DIR)$(DYNAMIC_LIB)
+
 
 .PHONY:	uninstall
 uninstall:
 	$Q echo "[UnInstall]"
-	$Q cd $(DESTDIR)$(PREFIX)/include/ && rm -f $(HEADERS)
-	$Q cd $(DESTDIR)$(PREFIX)/lib/     && rm -f libwiringPi.*
+	$Q cd /$(PUBLIC_INCLUDE_DIR) && rm -f $(HEADERS)
+	$Q if [ -d "/$(LOCAL_LIB_DIR)" ]; then cd /$(LOCAL_LIB_DIR) && rm -f $(DYNAMIC_LIB).*; fi;
+	$Q cd /$(PUBLIC_LIB_DIR) && rm -f $(DYNAMIC_LIB)
 	$Q $(LDCONFIG)
 
 
 .PHONY:	depend
 depend:
-	makedepend -Y $(SRC) $(SRC_I2C)
+	makedepend -Y $(SOURCES) $(SRC_I2C)
 
 # DO NOT DELETE
 
