--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -54,7 +54,7 @@ CC		=	arm-linux-gnueabihf-gcc
 DEBUG	=	-O2
 INCLUDE	=	-I.
 DEFS	=	-D_GNU_SOURCE
-CFLAGS	=	$(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Winline $(INCLUDE) -pipe -fPIC
+CFLAGS	=	$(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Winline -Werror $(INCLUDE) -pipe -fPIC
 #CFLAGS	=	$(DEBUG) $(DEFS) -Wformat=2 -Wall -Wextra -Wconversion -Winline $(INCLUDE) -pipe -fPIC
 LIBS	=	-lm -lpthread -lrt -lcrypt
 
