--- a/gpio/Makefile
+++ b/gpio/Makefile
@@ -25,6 +25,7 @@
 
 DESTDIR?=/usr
 PREFIX?=/local
+DEBTEMPDIR?=~/WiringPi
 
 ifneq ($V,1)
 Q ?= @
@@ -83,10 +84,10 @@ endif
 .PHONY:	install-deb
 install-deb:	gpio
 	$Q echo "[Install: deb]"
-	$Q install -m 0755 -d							~/wiringPi/debian-template/wiringPi/usr/bin
-	$Q install -m 0755 gpio							~/wiringPi/debian-template/wiringPi/usr/bin
-	$Q install -m 0755 -d							~/wiringPi/debian-template/wiringPi/usr/share/man/man1
-	$Q install -m 0644 gpio.1						~/wiringPi/debian-template/wiringPi/usr/share/man/man1
+	$Q install -m 0755 -d							$(DEBTEMPDIR)/debian-template/wiringPi/usr/local/bin
+	$Q install -m 0755 gpio							$(DEBTEMPDIR)/debian-template/wiringPi/usr/local/bin
+	$Q install -m 0755 -d							$(DEBTEMPDIR)/debian-template/wiringPi/usr/share/man/man1
+	$Q install -m 0644 gpio.1						$(DEBTEMPDIR)/debian-template/wiringPi/usr/share/man/man1
 
 .PHONY:	uninstall
 uninstall:
