--- a/gpio/Makefile
+++ b/gpio/Makefile
@@ -33,7 +33,8 @@ endif
 #DEBUG	= -g -O0
 DEBUG	= -O2
 CC	= gcc
-INCLUDE	= -I$(DESTDIR)$(PREFIX)/include
+#INCLUDE	= -I$(DESTDIR)$(PREFIX)/include
+INCLUDE	= -I../wiringPi
 CFLAGS	= $(DEBUG) -Wall -Wextra $(INCLUDE) -Winline -pipe
 
 LDFLAGS	= -L$(DESTDIR)$(PREFIX)/lib
