Enable LDFLAGS flag override
In case of the project cross-compilation, dependent libraries
(libcrypt) are located outside of the default library locations.

--- a/examples/q2w/Makefile
+++ b/examples/q2w/Makefile
@@ -32,7 +32,7 @@ CC	?= gcc
 INCLUDE	= -I/usr/local/include
 CFLAGS	= $(DEBUG) -Wall $(INCLUDE) -Winline -pipe $(EXTRA_CFLAGS)
 
-LDFLAGS	= -L/usr/local/lib
+LDFLAGS	?= -L/usr/local/lib
 LDLIBS    = -lwiringPi -lwiringPiDev -lpthread -lm
 
 ###############################################################################
